<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/category_add_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:layout_collapseMode="parallax"
            android:layout_gravity="top"
            >

            <TextView
                android:id="@+id/account_add_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/category"
                style="@style/AppTextTheme"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="gravity"
                android:gravity="bottom|center_horizontal"
                android:textSize="@dimen/large_text"
                android:background="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <ImageView
                android:id="@+id/account_add_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/back_arrow_icon"
                style="@style/AppIconTheme"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text"
                app:layout_constraintBaseline_toBaselineOf="@id/account_add_title"
                app:layout_constraintTop_toTopOf="@id/account_add_title"
                app:layout_constraintBottom_toBottomOf="@id/account_add_title"
                app:layout_constraintStart_toStartOf="@id/account_add_title"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_insetEdge="bottom"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/AppTextTheme"
                android:textSize="@dimen/large_text"
                android:text="@string/name_label"
                android:textColor="@color/textSecondary"
                app:layout_constraintTop_toTopOf="@id/category_name_field"
                app:layout_constraintBottom_toBottomOf="@id/category_name_field"
                app:layout_constraintStart_toStartOf="parent"
                />
            <EditText
                android:id="@+id/category_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxLength="30"
                android:inputType="text"
                style="@style/AppEditText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/field_barrier"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/category_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/category_name_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save_btn_label"
                android:textColor="@color/textPrimaryDark"
                android:backgroundTint="@color/primaryContentColor"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/field_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="category_name_label"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>