<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_screen_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            >


            <TextView
                android:id="@+id/settings_screen_title"
                style="@style/AppTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/settings_screen_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        android:paddingVertical="30dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/income_categories_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/income_categories_settings_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/income_category_icon"
                    app:layout_constraintTop_toTopOf="@id/income_categories_settings_label"
                    app:layout_constraintBottom_toBottomOf="@id/income_categories_settings_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/income_categories_settings_label"
                    app:layout_constraintHorizontal_weight="1"
                    app:tint="?android:attr/textColor" />

                <TextView
                    android:id="@+id/income_categories_settings_label"
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    style="@style/AppTextTheme"
                    android:text="@string/income_categories"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/income_categories_settings_icon"
                    app:layout_constraintHorizontal_weight="3"
                    />

                <View
                    style="@style/MildBorder"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <View
                    style="@style/MildBorder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expense_categories_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/expense_categories_settings_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/expense_category_icon"
                    app:layout_constraintTop_toTopOf="@id/expense_categories_settings_label"
                    app:layout_constraintBottom_toBottomOf="@id/expense_categories_settings_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/expense_categories_settings_label"
                    app:layout_constraintHorizontal_weight="1"
                    app:tint="?android:attr/textColor" />

                <TextView
                    android:id="@+id/expense_categories_settings_label"
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    style="@style/AppTextTheme"
                    android:text="@string/expense_categories"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/expense_categories_settings_icon"
                    app:layout_constraintHorizontal_weight="3"
                    />

                <View
                    style="@style/MildBorder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>